feat: 补全 macOS DMG 打包配置 + 跨平台 Java 路径修复
- electron/package.json: 新增 mac/dmg/linux 打包配置，分平台 dist 脚本
- electron/entitlements.mac.plist: 新增 macOS 代码签名权限声明
- electron/main.js: findJava() 根据平台选择 java.exe/java，修复 macOS 兼容
- BUILD_AND_RUN.md: 区分 Windows/macOS/Linux 打包流程